只保存一份swagger.yaml 添加project_db 初始化project_controller 更新swagger.yaml
