# swagger_server/controllers/projects_controller.py
@@ -1,18 +1,0 @@
-import connexion
-import six
-
-from swagger_server.models.project import Project  # noqa: E501
-from swagger_server import util
-
-
-def learner_learner_id_project_get(learnerId):  # noqa: E501
-    """返回一个Learner相关的课程
-
-     # noqa: E501
-
-    :param learnerId: 
-    :type learnerId: int
-
-    :rtype: List[Project]
-    """
-    return 'do some magic!'
